# hs-tree-sitter

./: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .prettierignore  README.md  cabal.project  package-lock.json  package.json
.github/workflows/: ci.yaml  haskell-ci.yml
base-compat-constptr/: README.md  base-compat-constptr.cabal
base-compat-constptr/src/Foreign/C/ConstPtr/: Compat.hs
hs-tree-sitter/: README.md  hs-tree-sitter.cabal
hs-tree-sitter-capi/: README.md  hs-tree-sitter-capi.cabal
hs-tree-sitter-capi/src/TreeSitter/: CApi.hsc
hs-tree-sitter-capi/test/: Main.hs
hs-tree-sitter-capi/test/Test/TreeSitter/: CApi.hs
hs-tree-sitter-generate-ast/: hs-tree-sitter-generate-ast.cabal
hs-tree-sitter-generate-ast/app/: Main.hs
hs-tree-sitter-generate-ast/app/TreeSitter/GenerateAst/Internal/: CodeGen.hs  Data.hs  Grammar.hs
hs-tree-sitter-generate-ast/data/: Ast.hs.template
hs-tree-sitter-test/: hs-tree-sitter-test.cabal
hs-tree-sitter-test/src-corpus/TreeSitter/: Corpus.hs
hs-tree-sitter-test/src-sexp/TreeSitter/: SExp.hs
hs-tree-sitter-test/test/: Main.hs
hs-tree-sitter-test/test/Test/: TreeSitter.hs
hs-tree-sitter-test/test/Test/TreeSitter/: Corpus.hs
hs-tree-sitter/src/: TreeSitter.hs
hs-tree-sitter/src-internal/TreeSitter/: Internal.hs
hs-tree-sitter/src-internal/TreeSitter/Internal/: ST.hs
scripts/: dev-dependencies.txt  test-cabal.sh
tree-sitter-javascript/: README.md  tree-sitter-javascript.cabal
tree-sitter-javascript/bindings/haskell/TreeSitter/: JavaScript.hs
tree-sitter-while/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter-while.cabal  tree-sitter.json
tree-sitter-while/bindings/c/: tree-sitter-while.pc.in
tree-sitter-while/bindings/go/: binding.go  binding_test.go
tree-sitter-while/bindings/haskell/TreeSitter/: While.hs
tree-sitter-while/bindings/node/: binding.cc
tree-sitter-while/bindings/python/tests/: test_binding.py
tree-sitter-while/bindings/python/tree_sitter_while/: __init__.py  binding.c
tree-sitter-while/bindings/rust/: build.rs  lib.rs
tree-sitter-while/bindings/swift/TreeSitterWhile/: while.h
tree-sitter-while/bindings/swift/TreeSitterWhileTests/: TreeSitterWhileTests.swift
tree-sitter-while/src/: grammar.json  node-types.json  parser.c
tree-sitter-while/test/corpus/: program.txt
