cabal-version: 3.0
name:          base-compat-constptr
version:       0.1.0.0
synopsis:      Backport of 'Foreign.C.ConstPtr'
description:   Backport of 'Foreign.C.ConstPtr'.
license:       AGPL-3.0-only
author:        Wen Kokke
maintainer:    wenkokke@users.noreply.github.com
category:      Foreign
build-type:    Simple
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/wenkokke/hs-tree-sitter
  subdir:   base-compat-constptr

common language
  ghc-options:
    -Wall -Wcompat -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunticked-promoted-constructors
    -Wunused-packages

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  if impl(ghc <9.6.1)
    ghc-options:
      -optc=-Wno-discarded-qualifiers
      -optc=-Wno-incompatible-pointer-types-discards-qualifiers

library
  import:          language
  exposed-modules: Foreign.C.ConstPtr.Compat
  build-depends:   base >=4.13 && <5
  hs-source-dirs:  src
