cabal-version:      3.4
name:               hs-tree-sitter-generate-ast
version:            0.1.0.0
license:            AGPL-3.0-only
synopsis:           AST generator for hs-tree-sitter
description:        AST generator for hs-tree-sitter.
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
category:           Language
build-type:         Simple
extra-source-files: data/Ast.hs.template
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

common language
  ghc-options:
    -Wall -Wcompat -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunticked-promoted-constructors
    -Wunused-packages -Wno-name-shadowing

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  if impl(ghc <9.6.1)
    ghc-options:
      -optc=-Wno-discarded-qualifiers
      -optc=-Wno-incompatible-pointer-types-discards-qualifiers

executable tree-sitter-generate-ast
  import:         language
  main-is:        Main.hs
  other-modules:
    TreeSitter.GenerateAst.Internal.CodeGen
    TreeSitter.GenerateAst.Internal.Data
    TreeSitter.GenerateAst.Internal.Grammar

  hs-source-dirs: app
  build-depends:
    , aeson                 >=2.2  && <2.3
    , base                  >=4.16 && <5
    , containers            >=0.6  && <0.8
    , doclayout             >=0.5  && <0.6
    , doctemplates          >=0.11 && <0.12
    , fgl                   >=5.8  && <5.9
    , file-embed            >=0.0  && <0.1
    , optparse-applicative  >=0.18 && <0.19
    , text                  >=1.2  && <2.2
    , vector                >=0.13 && <0.14
