cabal-version: 3.4
name:          hs-tree-sitter-test
version:       13.0.14.0
license:       AGPL-3.0-only
synopsis:      Test suite for hs-tree-sitter
description:   Test suite for hs-tree-sitter.
author:        Wen Kokke
maintainer:    wenkokke@users.noreply.github.com
category:      Language
build-type:    Simple
data-files:    test/data/jQuery.js
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

common language
  ghc-options:
    -Wall -Wcompat -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunticked-promoted-constructors
    -Wunused-packages

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  if impl(ghc <9.6.1)
    ghc-options:
      -optc=-Wno-discarded-qualifiers
      -optc=-Wno-incompatible-pointer-types-discards-qualifiers

library sexp
  import:          language
  exposed-modules: TreeSitter.SExp
  hs-source-dirs:  src-sexp
  build-depends:
    , base           >=4.16 && <5
    , Diff           >=0.5  && <1.1
    , parsec         >=3.1  && <3.2
    , prettyprinter  >=1.7  && <1.8
    , text           >=1.2  && <2.2

library corpus
  import:          language
  exposed-modules: TreeSitter.Corpus
  hs-source-dirs:  src-corpus
  build-depends:
    , base  >=4.13 && <5
    , text  >=1.2  && <2.2

test-suite hs-tree-sitter-test
  import:          language
  type:            exitcode-stdio-1.0
  ghc-options:     -rtsopts
  hs-source-dirs:  test
  main-is:         Main.hs
  autogen-modules: Paths_hs_tree_sitter_test
  other-modules:
    Paths_hs_tree_sitter_test
    Test.TreeSitter
    Test.TreeSitter.Corpus

  build-depends:
    , base                        >=4.13    && <5
    , base-compat-constptr
    , bytestring                  >=0.11    && <0.13
    , directory                   >=1.3     && <1.4
    , filepath                    >=1.4     && <1.6
    , Glob                        >=0.10    && <0.11
    , graphviz                    >=2999.20 && <2999.21
    , hs-tree-sitter
    , hs-tree-sitter-test:corpus
    , hs-tree-sitter-test:sexp
    , tasty                       >=1.5     && <1.6
    , tasty-hunit                 >=0.10    && <0.11
    , temporary                   >=1.3     && <1.4
    , text                        >=1.2     && <2.2
    , tree-sitter-javascript
    , tree-sitter-while
