cabal-version:   3.4
name:            hs-tree-sitter
version:         13.0.14.0
license:         AGPL-3.0-only
synopsis:        High-level bindings for tree-sitter
description:     High-level bindings for tree-sitter.
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
category:        Language
build-type:      Simple
extra-doc-files: README.md
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/wenkokke/hs-tree-sitter
  subdir:   hs-tree-sitter

common language
  ghc-options:
    -Wall -Wcompat -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunticked-promoted-constructors
    -Wunused-packages

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  if impl(ghc <9.6.1)
    ghc-options:
      -optc=-Wno-discarded-qualifiers
      -optc=-Wno-incompatible-pointer-types-discards-qualifiers

library
  import:             language
  exposed-modules:    TreeSitter
  hs-source-dirs:     src
  build-depends:      hs-tree-sitter:internal
  default-extensions: NoImplicitPrelude

library internal
  import:          language
  visibility:      private
  hs-source-dirs:  src-internal
  ghc-options:     -Wno-name-shadowing
  exposed-modules:
    TreeSitter.Internal
    TreeSitter.Internal.ST

  build-depends:
    , base                  >=4.13 && <5
    , base-compat-constptr  >=0.1  && <0.2
    , bytestring            >=0.11 && <0.13
    , hs-tree-sitter-capi   >=13.0 && <13.1
