[package]
name = "tree-sitter-while"
description = "Parser for the WHILE programming language."
version = "1.0.0"
authors = ["Wen Kokke <wenkokke@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "while"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-while"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
