cabal-version:      3.4
name:               tree-sitter-while
version:            0.0.0.0
license:            AGPL-3.0-only
synopsis:           Tree-sitter grammar/parser for the WHILE language
description:
  See <https://github.com/wenkokke/gilear/blob/main/packages/tree-sitter-while/#README>

author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
category:           Language
build-type:         Simple
extra-doc-files:    README.md
extra-source-files:
  bindings/c/tree-sitter-while.h
  grammar.js
  package.json
  src/parser.c
  src/tree_sitter/alloc.h
  src/tree_sitter/array.h
  src/tree_sitter/parser.h
  tree-sitter.json

data-files:
  src/node-types.json
  test/corpus/*.txt

tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

common language
  ghc-options:
    -Wall -Wcompat -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunticked-promoted-constructors
    -Wunused-packages

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  if impl(ghc <9.6.1)
    ghc-options:
      -optc=-Wno-discarded-qualifiers
      -optc=-Wno-incompatible-pointer-types-discards-qualifiers

library
  import:             language
  exposed-modules:    TreeSitter.While
  autogen-modules:    Paths_tree_sitter_while
  other-modules:      Paths_tree_sitter_while
  build-depends:
    , base                  >=4.13 && <5
    , base-compat-constptr  >=0.1  && <0.2

  build-tool-depends: hsc2hs:hsc2hs
  hs-source-dirs:     bindings/haskell
  include-dirs:       bindings/c
  includes:           tree-sitter-while.h
  c-sources:          src/parser.c
